--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <br>
 
     </form>
-    <label >like or no like or ne ochen, say your opinon </label>
+    <label >like or no like or ne ochen, say your opinion </label>
     <textarea  cols="5" rows="5"></textarea>
 </body>
 </html>
